修改模板，保留替换字符不转义

--- a/template/slide_3.html
+++ b/template/slide_3.html
@@ -14,13 +14,13 @@
         </div>
         <div id="impress">
             <div class="step" data-x="0" data-y="0">
-                {{slide1}}
+                {{{slide1}}}
             </div>
             <div class="step" data-x="0" data-y="-800" data-rotate="90">
-                {{slide2}}
+                {{{slide2}}}
                         </div>
             <div class="step" data-x="-1200" data-y="0" data-rotate-x="30" data-rotate-y="-30" data-rotate-z="90" data-scale="4">
-                {{slide3}}
+                {{{slide3}}}
             </div>
             <!-- darren code -->
             <div id="overview" class="step" data-x="-200" data-y="-500" data-scale="3"></div>
