--- a/template/slide_6.html
+++ b/template/slide_6.html
@@ -14,22 +14,22 @@
         </div>
         <div id="impress">
             <div class="step" data-x="0" data-y="0">
-                {{slide1}}
+                {{{slide1}}}
             </div>
             <div class="step" data-x="0" data-y="-800" data-rotate="90">
-                {{slide2}}
+                {{{slide2}}}
                         </div>
             <div class="step" data-x="-1200" data-y="0" data-rotate-x="30" data-rotate-y="-30" data-rotate-z="90" data-scale="4">
-                {{slide3}}
+                {{{slide3}}}
             </div>
             <div class="step" data-x="-1200" data-y="0" data-rotate-x="30" data-rotate-y="-30" data-rotate-z="90" data-scale="4">
-                {{slide4}}
+                {{{slide4}}}
             </div>
             <div class="step" data-x="-1200" data-y="0" data-rotate-x="30" data-rotate-y="-30" data-rotate-z="90" data-scale="4">
-                {{slide5}}
+                {{{slide5}}}
             </div>
             <div class="step" data-x="-1200" data-y="0" data-rotate-x="30" data-rotate-y="-30" data-rotate-z="90" data-scale="4">
-                {{slide6}}
+                {{{slide6}}}
             </div>
             <!-- darren code -->
             <div id="overview" class="step" data-x="-200" data-y="-500" data-scale="3"></div>
